
The count attribute serves as a performance optimization when your elements are keyed using sequential integers, for example:

  <input name="Person@count"   value="5">
  <input name="Person[0].Name" value="John">
  <input name="Person[1].Name" value="James">
  <input name="Person[2].Name" value="Jeff">
  <input name="Person[3].Name" value="Geoff">
  <input name="Person[4].Name" value="Jeffrey">

   


** NVelocity View Engine **

- Added support for global macros. Every *.vm file which is placed in the Views/macros directory
  will be scanned for macros (by Fabio Batista, rev. 1374)


** Scaffolding support **

- huge refactoring
- It's now using templates


** Test support **

- Introduced Castle.MonoRail.TestSupport


** Bug fixes **

MR-68	PreSendView is not being invoked by NVelocityViewEngine
        http://support.castleproject.org/jira/browse/MR-68
MR-66	DataBinder and ConvertUtils should support TypeConverters
        http://support.castleproject.org/jira/browse/MR-66
MR-64	DataBinder.Convert should support decimal
        http://support.castleproject.org/jira/browse/MR-64
MR-58	AbstractHelper generates invalid XHTML
        http://support.castleproject.org/jira/browse/MR-58
MR-57	Wrong urls are crashing UrlTokenizer
        http://support.castleproject.org/jira/browse/MR-57
MR-49	Remove public properties from the list of available actions (Controller.cs)
        http://support.castleproject.org/jira/browse/MR-49
MR-30	MR should not accept incorrect urls
        http://support.castleproject.org/jira/browse/MR-30


Beta 4
======

- Added useWindsorIntegration attribute to monoRail configuration section

Beta 3
======

- Databind
- Initial Scaffolding support
- Routing feature
- Localization support
- More helpers and improvements


Beta 2
====== 

- Few bug corrections
- Applied patch from Dru Sellers: NVelocityViewEngine adds a $siteRoot exposing the Request.ApplicationPath
